Prevent links overflowing out of their container.

--- a/src/styles/pages/template/_typography.scss
+++ b/src/styles/pages/template/_typography.scss
@@ -16,6 +16,7 @@ body {
     .link {
       word-break: normal !important;
       white-space: normal !important;
+      overflow-wrap: break-word !important;
     }
 
     h1 {
